--- a/vcweb/core/templates/participant/participant-index.html
+++ b/vcweb/core/templates/participant/participant-index.html
@@ -11,13 +11,13 @@ Participant Session Invitation Management
             <h3>Pick Experiment Sessions</h3>
             <div id="error-messages"></div>
             <div data-bind="if: groupedInvitation.length === 0">
-                <div class="well">
+                <div class="callout callout-warning">
                     <p>You are currently not invited to any experiments.</p>
                     <p>Please make sure that you have opted to receive invitations in your account profiles settings.</p>
                 </div>
             </div>
             <form data-bind="if: groupedInvitation.length > 0, submit: onSave">
-                <div class="well" data-bind="foreach: groupedInvitation">
+                <div class="callout callout-info" data-bind="foreach: groupedInvitation">
                 <fieldset class="radiogroup">
                     <legend><span data-bind="text: name"></span></legend>
                     <table class="table table-striped">
