--- a/vcweb/subject_pool/templates/subject-pool/session_detail.html
+++ b/vcweb/subject_pool/templates/subject-pool/session_detail.html
@@ -4,12 +4,7 @@
 {% endblock %}
 {% block page %}
     <div id='page'>
-{#        <div class="callout callout-info">#}
-{#            Welcome back, {{ request.user.get_full_name}}.#}
-{#        </div>#}
         <a class="btn" href="/subject-pool/session"><i class="icon-arrow-left"></i> Back</a>
-
-        <div id="error-messages"></div>
         <div id="session-detail" class="callout callout-info">
             <h3>Experiment Session Detail:</h3>
             <p><strong>Experiment: </strong>
@@ -22,9 +17,9 @@
             <p><strong>Location: </strong> {{ session_detail.location }}</p>
             <p><strong>Capacity: </strong> {{ session_detail.capacity }}</p>
         </div>
-
+        <div id="error-messages"></div>
         <h3>List of Participants signed up for Experiment Session.</h3>
-        <form id="participant-info" data-bind="submit: onSave">
+        <form id="participant-info">
             <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="participant-table">
                 <thead>
                     <tr>
@@ -36,16 +31,17 @@
                         <th> Attendance </th>
                     </tr>
                 </thead>
-                <tbody data-bind="foreach: participant_list">
+                <tbody>
+                {% for participant in participants %}
                     <tr>
-                        <input type="hidden" name="pk" data-bind="value: pk" />
-                        <td data-bind="text: first_name"></td>
-                        <td data-bind="text: last_name"></td>
-                        <td data-bind="text: email"></td>
-                        <td data-bind="text: major"></td>
-                        <td data-bind="text: class_status"></td>
+                        <input type="hidden" name="pk"/>
+                        <td>{{ participant.first_name }}</td>
+                        <td>{{ participant.last_name }}</td>
+                        <td>{{ participant.email }}</td>
+                        <td>{{ participant.major }}</td>
+                        <td>{{ participant.class_status }}</td>
                         <td>
-                            <select name="session-attendance" data-bind="value: attendance">
+                            <select name="session-attendance" value={{ participant.attendance }}>
                                 <option value="3">Select</option>
                                 <option value="0">Participated</option>
                                 <option value="1">Absent</option>
@@ -53,9 +49,10 @@
                             </select>
                         </td>
                     </tr>
+                {% endfor %}
                 </tbody>
             </table>
-            <button type="submit" class="btn btn-success">
+            <button type="submit" class="btn btn-success" id="submit-attendance">
                 <i class="icon-save"></i>
                 save
             </button>
@@ -68,14 +65,10 @@
     <script type="text/javascript" charset="utf8" src="//ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>
 
     <script type="text/javascript">
-        var participant_list = $.parseJSON("{{ participants | escapejs }}");
+
         $(function(){
 
-            function ExperimentListModel(participant_list) {
-
-                var model = ko.mapping.fromJS(participant_list);
-
-                self.onSave = function(formElement) {
+            $('#submit-attendance').click( function(formElement) {
                     var participantSignupPK = $("#participant-info").find("table tbody tr input[type=hidden]").map(function(){ return this.value }).get();
                     var participantAttendance = $("#participant-info").find("table tbody tr select").map(function(){ return this.value }).get();
 
@@ -90,12 +83,7 @@
                             }
                         }
                     });
-                };
-                return model;
-            }
-
-            ko.applyBindings(new ExperimentListModel(participant_list))
-
+                });
 
             /* API method to get paging information */
             $.fn.dataTableExt.oApi.fnPagingInfo = function ( oSettings ) {
