--- a/vcweb/subject_pool/templates/subject-pool/session_detail.html
+++ b/vcweb/subject_pool/templates/subject-pool/session_detail.html
@@ -19,8 +19,11 @@
         </div>
         <div id="error-messages"></div>
         <h3>List of Participants signed up for Experiment Session.</h3>
-        <form id="participant-info">
+        <form method="POST" id="participant-info" action="">
+        {{ formset.management_form }}
             <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="participant-table">
+                {% for form in formset.forms %}
+                {% if forloop.first %}
                 <thead>
                     <tr>
                         <th> First Name </th>
@@ -31,17 +34,16 @@
                         <th> Attendance </th>
                     </tr>
                 </thead>
+                {% endif %}
                 <tbody>
-                {% for participant in participants %}
                     <tr>
-                        <input type="hidden" name="pk"/>
-                        <td>{{ participant.first_name }}</td>
-                        <td>{{ participant.last_name }}</td>
-                        <td>{{ participant.email }}</td>
-                        <td>{{ participant.major }}</td>
-                        <td>{{ participant.class_status }}</td>
+                        <td> <input type="hidden" name="pk" value={{ form.instance.pk }}/> {{ form.instance.invitation.participant.first_name }}</td>
+                        <td>{{ form.instance.invitation.participant.last_name }}</td>
+                        <td>{{ form.instance.invitation.participant.email }}</td>
+                        <td>{{ form.instance.invitation.participant.major }}</td>
+                        <td>{{ form.instance.invitation.participant.class_status }}</td>
                         <td>
-                            <select name="session-attendance" value={{ participant.attendance }}>
+                            <select name="session-attendance" value={{ form.instance.attendance }}>
                                 <option value="3">Select</option>
                                 <option value="0">Participated</option>
                                 <option value="1">Absent</option>
@@ -62,28 +64,30 @@
 {% endblock %}
 {% block javascript %}
     {{ block.super }}
-    <script type="text/javascript" charset="utf8" src="//ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>
+        <script type="text/javascript" charset="utf8" src="//ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>
 
-    <script type="text/javascript">
+        <script type="text/javascript">
 
         $(function(){
 
-            $('#submit-attendance').click( function(formElement) {
-                    var participantSignupPK = $("#participant-info").find("table tbody tr input[type=hidden]").map(function(){ return this.value }).get();
-                    var participantAttendance = $("#participant-info").find("table tbody tr select").map(function(){ return this.value }).get();
-
-                    $.ajax("/subject-pool/session/attendance", {
-                        data: 'pk_list='+ participantSignupPK + '&attendance_list=' + participantAttendance,
-                        type: "POST",
-                        success: function(result) {
-                            if(result.success) {
-                                $("#error-messages").html('<div class="alert alert-success"><strong>Success!&nbsp;&nbsp;</strong>'+ result.message + '</strong></div>');
-                            } else{
-                                 $("#error-messages").html('<div class="alert alert-danger"><strong>Whoops!&nbsp;&nbsp;</strong>'+ result.message + '</strong></div>');
-                            }
-                        }
-                    });
-                });
+{#            $('#submit-attendance').click( function(e) {#}
+{#                e.preventDefault();#}
+{#                var participantSignupPK = $("#participant-info").find("table tbody tr input[type=hidden]").map(function(){ return this.value }).get();#}
+{#                var participantAttendance = $("#participant-info").find("table tbody tr select").map(function(){ return this.value }).get();#}
+{#                var formData = $('#participant-info').serialize()#}
+{##}
+{#                $.ajax("/subject-pool/session/attendance", {#}
+{#                    type: "POST",#}
+{#                    data: formData,#}
+{#                    success: function(result) {#}
+{#                        if(result.success) {#}
+{#                            $("#error-messages").html('<div class="alert alert-success"><strong>Success!&nbsp;&nbsp;</strong>'+ result.message + '</strong></div>');#}
+{#                        } else{#}
+{#                             $("#error-messages").html('<div class="alert alert-danger"><strong>Whoops!&nbsp;&nbsp;</strong>'+ result.message + '</strong></div>');#}
+{#                        }#}
+{#                    }#}
+{#                });#}
+{#            });#}
 
             /* API method to get paging information */
             $.fn.dataTableExt.oApi.fnPagingInfo = function ( oSettings ) {
