--- a/vcweb/core/templates/participant/participant-index.html
+++ b/vcweb/core/templates/participant/participant-index.html
@@ -6,20 +6,16 @@ Participant Session Invitation Management
 <h1>Dashboard</h1>
 {% endblock %}
 {% block page %}
+    {% regroup invitation_list by experiment_metadata_name as grouped_invitations %}
     <div class='row' id='page'>
         <div id="content" class="span12">
             <h3>Pick Experiment Sessions</h3>
             <div id="error-messages"></div>
-            <div data-bind="if: groupedInvitation.length === 0">
-                <div class="callout callout-warning">
-                    <p>You are currently not invited to any experiments.</p>
-                    <p>Please make sure that you have opted to receive invitations in your account profiles settings.</p>
-                </div>
-            </div>
-            <form data-bind="if: groupedInvitation.length > 0, submit: onSave">
-                <div class="callout callout-info" data-bind="foreach: groupedInvitation">
+            <form method="POST" action="session/update">
+                {% for exp in grouped_invitations %}
+                <div class="callout callout-info">
                 <fieldset class="radiogroup">
-                    <legend><span data-bind="text: name"></span></legend>
+                    <legend><span> {{ exp.grouper }}</span></legend>
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -32,10 +28,14 @@ Participant Session Invitation Management
                                     Start Time
                                     <span class="add-on"><i class="icon-time"></i></span>
                                 </th>
-                                <th>
-                                    End Date
-                                    <span class="add-on"><i class="icon-calendar"></i></span>
-                                </th>
+                                {% with exp.list.0.invitation as first_invitation %}
+                                    {% if first_invitation.scheduled_end_date != '' %}
+                                        <th>
+                                            End Date
+                                            <span class="add-on"><i class="icon-calendar"></i></span>
+                                        </th>
+                                    {% endif %}
+                                {% endwith %}
                                 <th>
                                     End Time
                                     <span class="add-on"><i class="icon-time"></i></span>
@@ -47,33 +47,56 @@ Participant Session Invitation Management
                                 <th> Openings </th>
                             </tr>
                         </thead>
-                        <tbody data-bind="foreach: children ">
-                            <tr data-bind= "if: openings <=0 " class="error">
-                                <td>
-                                    <input disabled type="radio" data-bind="value: invitation_pk, checked: selected, attr:{name: $parent.name}" />
-                                </td>
-                                <td data-bind="text: scheduled_date"></td>
-                                <td><b data-bind="text: scheduled_time"></b></td>
-                                <td data-bind="text: scheduled_end_date"></td>
-                                <td><b data-bind="text: scheduled_end_time"></b></td>
-                                <td data-bind="text: location"></td>
-                                <td data-bind="text: openings"></td>
-                            </tr>
-                            <tr data-bind=  "ifnot: openings <=0">
-                                <td>
-                                    <input type="radio" data-bind="value: invitation_pk, checked: selected, attr:{name: $parent.name}"/>
-                                </td>
-                                <td data-bind="text: scheduled_date"></td>
-                                <td><b data-bind="text: scheduled_time"></b></td>
-                                <td data-bind="text: scheduled_end_date"></td>
-                                <td><b data-bind="text: scheduled_end_time"></b></td>
-                                <td data-bind="text: location"></td>
-                                <td data-bind="text: openings"></td>
-                            </tr>
+                        <tbody>
+                            {% for item in exp.list %}
+                                {% if item.invitation.openings  != 0 %}
+                                <tr>
+                                    <td>
+                                        {% if item.invitation.selected == True %}
+                                            <input type="radio" value= {{ item.invitation.invitation_pk }} name={{ item.experiment_metadata_name|cut:" " }} checked />
+                                        {% else %}
+                                            <input type="radio" value= {{ item.invitation.invitation_pk }} name={{ item.experiment_metadata_name|cut:" " }} />
+                                        {% endif %}
+                                    </td>
+                                    <td> {{ item.invitation.scheduled_date }}</td>
+                                    <td><b> {{ item.invitation.scheduled_time }}</b></td>
+                                    {% if item.invitation.scheduled_end_date != '' %}
+                                        <td> {{ item.invitation.scheduled_end_date }}</td>
+                                    {% endif %}
+                                    <td><b> {{ item.invitation.scheduled_end_time }}</b></td>
+                                    <td> {{ item.invitation.location }}</td>
+                                    <td> {{ item.invitation.openings }}</td>
+                                </tr>
+                                {% else %}
+                                <tr class="error">
+                                    <td>
+                                       {% if item.invitation.selected == True %}
+                                            <input disabled type="radio" value= {{ item.invitation.invitation_pk }} name={{ item.experiment_metadata_name|cut:" " }} checked />
+                                       {% else %}
+                                            <input disabled type="radio" value= {{ item.invitation.invitation_pk }} name={{ item.experiment_metadata_name|cut:" " }} />
+                                        {% endif %}
+                                    </td>
+                                    <td> {{ item.invitation.scheduled_date }}</td>
+                                    <td><b> {{ item.invitation.scheduled_time }}</b></td>
+                                    {% if item.invitation.scheduled_end_date != '' %}
+                                        <td> {{ item.invitation.scheduled_end_date }}</td>
+                                    {% endif %}
+                                    <td><b> {{ item.invitation.scheduled_end_time }}</b></td>
+                                    <td> {{ item.invitation.location }}</td>
+                                    <td> {{ item.invitation.openings }}</td>
+                                </tr>
+                            {% endif %}
+                            {% endfor %}
                         </tbody>
                     </table>
                 </fieldset>
                 </div>
+                {% empty %}
+                    <div class="callout callout-warning">
+                        <p>You are currently not invited to any experiments.</p>
+                        <p>Please make sure that you have opted to receive invitations in your account profiles settings.</p>
+                    </div>
+                {% endfor %}
                 <input type="submit" class="btn btn-success" value="Submit" />
                 <input type="reset" class="btn" />
             </form>
@@ -82,53 +105,4 @@ Participant Session Invitation Management
 {% endblock page %}
 {% block javascript %}
     {{ block.super }}
-    <script type= "text/javascript" src="{{ STATIC_URL }}js/underscore-min.js"></script>
-    <script type="text/javascript">
-        var invitation_list = $.parseJSON("{{ view_model_json | escapejs }}");
-
-        var oldInvitationPkList=[];
-
-        for (var key in invitation_list) {
-            var inv = invitation_list[key].invitation;
-            if(inv.selected) {
-                oldInvitationPkList.push(inv.invitation_pk)
-            }
-        }
-
-        var groupedInvitation =
-               _.chain(invitation_list)
-                .groupBy('experiment_metadata_name')
-                       .map(function(value, key){
-                                return {
-                                       name: key,
-                                       children: _.pluck(value, 'invitation')
-                                }
-                       }).value();
-
-        $(function(){
-
-            function ExperimentListModel(groupedInvitation) {
-
-                var model = ko.mapping.fromJS(groupedInvitation);
-
-                self.onSave = function(formElement) {
-                    var invitationPkList = $(formElement).find('input[type=radio]:checked').map(function() {
-                          return this.value
-                    }).get();
-                    $.ajax("/participant/session/update", {
-                        data: 'invitation_pk_list='+ invitationPkList + '&old_invitation_pk_list=' + oldInvitationPkList,
-                        type: "POST",
-                        success: function(result) {
-                            if(result.success) {
-                                $("#error-messages").html('<div class="alert alert-success"><strong>Well done! </strong>'+ result.message + '</strong></div>');
-                            }
-                        }
-                    });
-                };
-                return model;
-            }
-            ko.applyBindings(new ExperimentListModel(groupedInvitation))
-        });
-    </script>
-
 {% endblock %}
