fixing the save button shown in session detail page when there are no participant signup. removing unused url from the core urls.py. adding a jquery scrollTop function to show the error/success messages to users.

--- a/vcweb/core/templates/participant/participant-index.html
+++ b/vcweb/core/templates/participant/participant-index.html
@@ -12,7 +12,7 @@ Participant Session Invitation Management
             <h3>Pick Experiment Sessions</h3>
             <div id="error-messages">
                 {% if success == "true" %}
-                    <div class='alert alert-success'><strong>Congratulations,</strong> You were successfully registered for the experiment session.</div>
+                    <div class='alert alert-success'><strong>Congratulations,</strong> Your registration changes have been saved.</div>
                 {% elif success == "false"%}
                     <div class='alert alert-danger'><strong>Sorry, </strong>You were NOT registered for the experiment session.</div>
                 {% endif %}
