--- a/vcweb/subject_pool/templates/subject-pool/session_detail.html
+++ b/vcweb/subject_pool/templates/subject-pool/session_detail.html
@@ -22,8 +22,6 @@
         <form method="POST" id="participant-info" action="">
         {{ formset.management_form }}
             <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="participant-table">
-                {% for form in formset.forms %}
-                {% if forloop.first %}
                 <thead>
                     <tr>
                         <th> First Name </th>
@@ -34,7 +32,7 @@
                         <th> Attendance </th>
                     </tr>
                 </thead>
-                {% endif %}
+                {% for form in formset.forms %}
                 <tr>
                     <td>
                         {% for hidden in form.hidden_fields %}
@@ -51,13 +49,14 @@
                 </tr>
             {% endfor %}
             </table>
-            <button type="submit" class="btn btn-success" id="submit-attendance">
-                <i class="icon-save"></i>
-                save
-            </button>
+            {% if formset.forms|length > 0 %}
+                <button type="submit" class="btn btn-success" id="submit-attendance">
+                    <i class="icon-save"></i>
+                    save
+                </button>
+            {% endif %}
         </form>
     </div>
-
 {% endblock %}
 {% block javascript %}
     {{ block.super }}
