solving a bug on experimenter index page where while changing date use jump the session from active to past. solving a bung in participant index page where they use to see the invitations for which they have signed up and that experiment session has already been over.

--- a/vcweb/subject_pool/templates/subject-pool/experimenter-index.html
+++ b/vcweb/subject_pool/templates/subject-pool/experimenter-index.html
@@ -425,7 +425,7 @@ Experiment Session Management
                     //when a user changes the date, update the view model
                     ko.utils.registerEventHandler(element, "changeDate", function(event) {
                         var value = valueAccessor();
-                        if (ko.isObservable(value)) {
+                        if (ko.isObservable(value) && event.date > new Date()) {
                             value(event.date);
                         }
                     });
@@ -436,6 +436,7 @@ Experiment Session Management
                     if (widget) {
                         widget.date = new Date(ko.utils.unwrapObservable(valueAccessor()));
                         widget.setValue();
+                        console.log(widget)
                     }
                 }
             };
